<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_catalogue"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_catalogue" />
        <item
            android:id="@+id/nav_challenge"
            android:icon="@drawable/ic_trophy"
            android:title="@string/nav_challenge" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_profile" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_group_settings">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_group_communicate">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_feedback" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_group_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/nav_logout" />
    </group>

</menu>
