<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ll_answer_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/edittext_answer_text"
        android:hint="@string/answer_editor_text"
        android:layout_weight="3"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_answer_hint"
        android:hint="@string/answer_editor_hint"
        android:layout_weight="2"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_answer_uri"
        android:hint="@string/answer_editor_uri"
        android:layout_weight="1"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_buttongroup_answer_editor"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_answer_editor_correct"
            android:text="@string/correct"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_answer_editor_incorrect"
            android:text="@string/incorrect"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:id="@+id/button_answer_editor_cancel"
            android:backgroundTint="@color/colorPrimary"
            android:visibility="invisible"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_answer_editor_save"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:drawableRight="@drawable/ic_save"
            android:drawableTint="@color/white"
            android:text="@string/save"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_answer_editor_add"
            android:tint="@color/white"
            android:visibility="gone"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:src="@drawable/ic_note_add"
            android:drawableTint="@color/white"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padding_list_bottom"
        android:background="@android:color/darker_gray"/>

</LinearLayout>